# steam-cli

./: .gitignore  Cargo.toml  README.md  flake.nix  install-locally.sh  shell.nix
scripts/dev/: fix-os-after-update-pt-1.sh  fix-os-after-update-pt-2.sh  install-build-packages.sh  install-dev-env-packages.sh  install-dev-packages.sh
scripts/proton/: fix-sync-bug.sh
src/: cli.rs  discord-cli.rs  games_service.rs  main.rs
src/steam/: arg_matcher.rs  client.rs  games_router.rs  games_service.rs  logger.rs  mod.rs  models.rs  router.rs  service.rs
src/util/: async_help.rs  mod.rs  string_parser.rs
