[[bin]]
name = "steam-cli"
path = "src/cli.rs"

[package]
name = "steam-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.4.18", features = ["derive", "cargo"] }
futures = "0.3.30"
reqwest = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = "1.36.0"
