[[bin]]
name = "steam-cli"
path = "src/cli.rs"

[[bin]]
name = "discord-steam-cli"
path = "src/discord-cli.rs"


[package]
name = "steam-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.5.4", features = ["derive", "cargo"] }
futures = "0.3.30"
reqwest = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serenity = "0.12"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
